# mcd-demo

./: .gitignore  README.md  app.dockerfile  build_app_docker.sh  build_gui_app.sh  clean_java_artifacts.sh  copy_certs.sh  deploy.sh  discussion_points.txt  docker-compose.yml  docker-stack.yml  generate_certs.sh  generate_dev_certs.sh  gui-pipeline.dockerfile  nginx.dockerfile  optimization_app_dev.spec  pip_freeze.sh  pyproject.toml  r.txt  requirements-core.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_app_production.sh  run_optimization_service.sh  run_rendering_service.sh
backend/: pyproject.toml
benchmark/: api_benchmark.py  benchmark-results-399ac6b8-3baa-4fd2-a415-48baf7f6557e.txt  benchmark-results-699b7773-24d9-4133-9e10-fc791632aa42.txt  benchmark-results-9b91b099-ac0a-46aa-b13d-789c7cae7b1b.txt  benchmark-results-b0430ee7-168d-4c8a-8e0c-6a04d9dce4df.txt  result_analysis.py  simple_runner.py
deployment/: app.dockerfile  delete-deployment.sh  deploy.sh  docker-stack.yml  frontend.dockerfile  gateway.dockerfile  nginx.dockerfile  run_optimization_service.sh  run_rendering_service.sh
frontend/: build_gui.sh  bundle_all.sh  compile.sh  package-lock.json  package.json  webpack.config.js
frontend-app/: package-lock.json  package.json
nginx/: frontend_nginx.conf  gateway_nginx.conf  nginx.conf
open-api/: api-spec.yml  package-lock.json  package.json
src/: _validation_utils.py  app.py
test/: test_app.py  test_bike_optimizer.py  test_fit_analyzer.py  test_model_scheme_validations.py  test_pose_image_processing.py
(+288 files in other folders)
