# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decode-mcd-demo"
version = "0.0.1"
description = "Demonstrates the capabilities of MultiObjective Counterfactuals for Design"
readme = "README.md"
authors = [{ name = "Lyle Regenwetter, Noah Wiley, Yazan Abu Obaideh" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["counterfactuals", "design", "multi-objective", "multiobjective",
    "machine-learning", "demo"]
dependencies = [
    "tensorflow",
    "decode-mcd"
]
requires-python = ">=3.8"

[project.urls]
#Homepage = "https://github.com/Lyleregenwetter/Multiobjective-Counterfactuals-for-Design"
